@@ -1,0 +1,78 @@
+<?php
+/**
+ * CExistValidator class file.
+ *
+ * @author Qiang Xue <qiang.xue@gmail.com>
+ * @link http://www.yiiframework.com/
+ * @copyright Copyright &copy; 2008-2009 Yii Software LLC
+ * @license http://www.yiiframework.com/license/
+ */
+
+/**
+ * CExistValidator validates that the attribute value exists in a table.
+ *
+ * This validator is often used to verify that a foreign key contains a value
+ * that can be found in the foreign table.
+ *
+ * CExistValidator can only be used for active record objects.
+ *
+ * @author Qiang Xue <qiang.xue@gmail.com>
+ * @version $Id$
+ * @package system.validators
+ * @since 1.0.4
+ */
+class CExistValidator extends CValidator
+{
+	/**
+	 * @var string the ActiveRecord class name that should be used to
+	 * look for the attribute value being validated. Defaults to null,
+	 * meaning using the ActiveRecord class of the attribute being validated.
+	 * You may use path alias to reference a class name here.
+	 * @see attributeName
+	 */
+	public $className;
+	/**
+	 * @var string the ActiveRecord class attribute name that should be
+	 * used to look for the attribute value being validated. Defaults to null,
+	 * meaning using the name of the attribute being validated.
+	 * @see className
+	 */
+	public $attributeName;
+	/**
+	 * @var boolean whether the comparison is case sensitive. Defaults to true.
+	 * Note, by setting it to false, you are assuming the attribute type is string.
+	 */
+	public $caseSensitive=true;
+	/**
+	 * @var boolean whether the attribute value can be null or empty. Defaults to true,
+	 * meaning that if the attribute is empty, it is considered valid.
+	 */
+	public $allowEmpty=true;
+
+	/**
+	 * Validates the attribute of the object.
+	 * If there is any error, the error message is added to the object.
+	 * @param CModel the object being validated
+	 * @param string the attribute being validated
+	 */
+	protected function validateAttribute($object,$attribute)
+	{
+		$value=$object->$attribute;
+		if($this->allowEmpty && ($value===null || $value===''))
+			return;
+
+		$className=$this->className===null?get_class($object):Yii::import($this->className);
+		$attributeName=$this->attributeName===null?$attribute:$this->attributeName;
+
+		$finder=CActiveRecord::model($className);
+		$select=$finder->getTableSchema()->primaryKey;
+		$result=$finder->findByAttributes(array($attributeName=>$value),array('select'=>$select));
+
+		if($result===null)
+		{
+			$message=$this->message!==null?$this->message:Yii::t('yii','{attribute} "{value}" is invalid.');
+			$this->addError($object,$attribute,$message,array('{value}'=>$value));
+		}
+	}
+}
+
